# the-light

./: .gitignore  CONTEXT.md  Cargo.toml  DATA_SOURCES.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
crates/biblia-cli/: Cargo.toml
crates/biblia-cli/src/: ai_common.rs  ask.rs  config.rs  export.rs  highlight.rs  main.rs  md.rs  note.rs  plan.rs  read.rs  render.rs  search.rs  sources.rs  study.rs  theme.rs  tui.rs  xref.rs
crates/biblia-cli/tests/: config_cmd.rs  connector_cmd.rs  export.rs  highlight.rs  meta_cmd.rs  note.rs  plan.rs  read.rs  search.rs  study_cmd.rs  tui.rs  xref.rs
crates/biblia-core/: Cargo.toml
crates/biblia-core/src/: config.rs  lib.rs  model.rs  reference.rs  search.rs  store.rs  util.rs
crates/biblia-core/src/ai/: keys.rs  mod.rs  prompts.rs  providers.rs  study.rs
crates/biblia-core/src/source/: apibible.rs  embedded.rs  esv.rs  mod.rs
crates/biblia-core/src/userdata/: highlights.rs  mod.rs  notes.rs  plans.rs
crates/biblia-tui/: Cargo.toml
crates/biblia-tui/src/: app.rs  lib.rs  terminal.rs  ui.rs
crates/the-light-cli/: Cargo.toml
crates/the-light-cli/src/: ai_common.rs  ask.rs  config.rs  export.rs  highlight.rs  main.rs  note.rs  plan.rs  read.rs  render.rs  search.rs  sources.rs  study.rs  theme.rs  tui.rs  xref.rs
crates/the-light-cli/tests/: config_cmd.rs  connector_cmd.rs  export.rs  highlight.rs  meta_cmd.rs  note.rs  plan.rs  read.rs  search.rs  study_cmd.rs  tui.rs  xref.rs
crates/the-light-core/: Cargo.toml
crates/the-light-core/migrations/: v1_initial.sql  v2_scholarly.sql
crates/the-light-core/src/: config.rs  export.rs  lib.rs  model.rs  query.rs  reference.rs  scholarly.rs  search.rs  store.rs  xref.rs
crates/the-light-core/src/ai/: citation.rs  keys.rs  lexicon.rs  mod.rs  prompts.rs  providers.rs  research.rs  study.rs
crates/the-light-core/src/source/: embedded.rs  http.rs
crates/the-light-core/src/userdata/: mod.rs  note_slug.rs  notes.rs  plans.rs  sessions.rs
crates/the-light-tui/: Cargo.toml
crates/the-light-tui/src/: app.rs  clipboard.rs  lib.rs  scroll.rs  terminal.rs  theme.rs  ui.rs
data/: README.md
docs/: PROMPTS.md
packaging/homebrew/: biblia.rb  light.rb
xtask/: Cargo.toml
xtask/src/: import.rs  main.rs  scholarly_import.rs  xref_import.rs
