[package]
name = "xtask"
description = "Tarefas de build/import one-off (cargo xtask): importação de datasets livres."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.102"
biblia-core = { path = "../crates/biblia-core" }
indicatif = "0.18.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
