[package]
name = "xtask"
description = "Tarefas de build/import one-off (cargo xtask): importação de datasets livres."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.102"
the-light-core = { path = "../crates/the-light-core" }
indicatif = "0.18.4"
# Mesma major do the-light-core (0.13, TLS rustls via default-tls) para dedup do lock.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "default-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
