[package]
name = "biblia-cli"
description = "Binário `biblia`: leitor de Bíblia para terminal (CLI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "biblia"
path = "src/main.rs"

[dependencies]
biblia-core = { path = "../biblia-core" }
clap = { version = "4.5.61", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
