[package]
name = "biblia-cli"
description = "Binário `biblia`: leitor de Bíblia para terminal (CLI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "biblia"
path = "src/main.rs"

[dependencies]
biblia-core = { path = "../biblia-core" }
biblia-tui = { version = "0.1.0", path = "../biblia-tui" }
clap = { version = "4.5.61", features = ["derive"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
shlex = "2.0.1"
tempfile = "3.27.0"
terminal_size = "0.4.4"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
