[package]
name = "biblia-cli"
description = "Binário `biblia`: leitor de Bíblia hackeável para terminal (CLI + TUI), bilíngue PT/EN, com estudo por IA opt-in (BYOK)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["bible", "cli", "tui", "scripture", "study"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "biblia"
path = "src/main.rs"

[dependencies]
biblia-core = { version = "1.0.0", path = "../biblia-core" }
biblia-tui = { version = "1.0.0", path = "../biblia-tui" }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.5.61", features = ["derive"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
shlex = "2.0.1"
tempfile = "3.27.0"
terminal_size = "0.4.4"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
