[package]
name = "biblia-core"
description = "Núcleo de lógica da Bíblia CLI: modelo, parser de referências, fontes, store SQLite."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
