[package]
name = "biblia-core"
description = "Núcleo de lógica da Bíblia CLI: modelo, parser de referências, fontes, store SQLite."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
directories = "6.0.0"
regex = "1.12.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.7"

[dev-dependencies]
tempfile = "3.27.0"
