[package]
name = "biblia-tui"
description = "Interface de terminal (TUI) da Bíblia CLI — fase 3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
biblia-core = { path = "../biblia-core" }

[dev-dependencies]
