[package]
name = "biblia-tui"
description = "Interface de terminal (TUI) da Bíblia CLI — fase 3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
biblia-core = { path = "../biblia-core" }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }

[dev-dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
