[package]
name = "the-light-cli"
description = "Binário `light`: leitor de Bíblia hackeável para terminal (CLI + TUI), bilíngue PT/EN, com estudo por IA opt-in (BYOK)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
# v1.0.0 distribui binário + Homebrew + `cargo install --git`; não no crates.io (ADR-0011).
# (metadados crates.io mantidos abaixo caso a publicação seja habilitada no futuro.)
publish = false
readme = "../../README.md"
keywords = ["bible", "cli", "tui", "scripture", "study"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "light"
path = "src/main.rs"

[dependencies]
the-light-core = { version = "1.1.0", path = "../the-light-core" }
the-light-tui = { version = "1.1.0", path = "../the-light-tui" }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.5.61", features = ["derive"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
shlex = "2.0.1"
tempfile = "3.27.0"
terminal_size = "0.4.4"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
