[package]
name = "the-light-core"
description = "Núcleo de lógica da The Light: modelo, parser de referências, fontes, store SQLite."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# v1.0.0 distribui binário + Homebrew + `cargo install --git`; não no crates.io (ADR-0011).
publish = false

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
directories = "6.0.0"
regex = "1.12.4"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "default-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.0.7"

[dev-dependencies]
