[package]
name = "the-light-core"
description = "Núcleo de lógica da The Light: modelo, parser de referências, fontes, store SQLite."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
# v1.0.0 distribui binário + Homebrew + `cargo install --git`; não no crates.io (ADR-0011).
publish = false

[features]
# `embedded` = capacidade completa: store SQLite local (rusqlite), conector HTTP
# (reqwest) e persistência em disco (config, notas, planos, sessões, export).
# É o default — CLI/TUI/xtask compilam exatamente como antes.
#
# SEM `embedded` (`--no-default-features`), só a lógica **pura** é compilada:
# `model` (tipos de domínio) + `reference` (parser PT/EN). Esse subconjunto não
# arrasta SQLite-C nem TLS e compila para `wasm32-unknown-unknown` — é o que a
# fronteira `the-light-app` consome no alvo web (ver the-light-app ADR-0005).
default = ["embedded"]
embedded = [
    "dep:chrono",
    "dep:directories",
    "dep:reqwest",
    "dep:rusqlite",
    "dep:serde_json",
    "dep:tempfile",
    "dep:toml",
]

[dependencies]
# Sempre disponíveis (puras, compatíveis com wasm) — usadas por `model`/`reference`:
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

# Opcionais — só com a feature `embedded` (camada pesada: store/rede/persistência):
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"], optional = true }
directories = { version = "6.0.0", optional = true }
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "default-tls"], optional = true }
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
serde_json = { version = "1.0.150", optional = true }
tempfile = { version = "3.27.0", optional = true }
toml = { version = "1.0.7", optional = true }

[dev-dependencies]
